# cblre

./: .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  pyproject.toml  release-please-config.json  requirements.txt
.github/ISSUE_TEMPLATE/: access-request.yml  bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml
data/sample/: README.md  sample.jsonl
docs/: data_access.md  methodology.md  quickstart.md
harness/: __init__.py  judge.py  models.py  run_eval.py  scorers.py  stats.py
schema/: eval_item.schema.json
tests/: test_judge.py  test_models.py  test_run_eval.py  test_scorers.py  test_stats.py
